--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,15 @@ a {
   .link-active {
     @apply border-b-2 text-primary border-primary;
   }
+
+  .heading {
+    @apply focus:outline-none xl:text-4xl md:text-2xl text-xl text-center text-gray-800 font-extrabold mb-5 p-2
+  }
+
+  .section {
+    @apply px-4 pt-16 mx-auto max-w-7xl sm:px-6 lg:px-8
+  }
+  
 }
 
 
